--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,13 +1,13 @@
 bzip2:
 - '1'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - gxx
 docker_image:
-- condaforge/linux-anvil
+- condaforge/linux-anvil-comp7
 icu:
 - '58'
 libxml2:
