--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -3,9 +3,9 @@ MACOSX_DEPLOYMENT_TARGET:
 bzip2:
 - '1'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - clangxx
 icu:
