fix meta.yml license identifier

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,7 @@ test:
 
 about:
   home: https://github.com/LanguageMachines/ticcutils
-  license: GPL-3.0
+  license: GPL-3.0-only
   license_family: GPL
   license_file: COPYING
   summary: A generic utility library shared by Tilburg centre for Cognition and Communication (TiCC) software
